<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#F1F5F8"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="@dimen/dim_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView

        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_margin_top"
        android:fontFamily="@font/productsansmedium"
        android:padding="@dimen/dim_padding"
        android:text="@string/create_nnew_task"
        android:textColor="#2F2F2F"
        android:textSize="@dimen/dim_text_main"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dim_padding_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/inputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:paddingBottom="@dimen/dim_padding_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLines="1"
                android:backgroundTint="@color/textColorBtn"
                android:id="@+id/itTitle"
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:drawablePadding="10dip"
                android:fontFamily="@font/productsansmedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:paddingBottom="@dimen/dim_padding_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itDescription"
                style="@style/MyEditTextStyle"
                android:backgroundTint="@color/textColorBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dip"
                android:fontFamily="@font/productsansmedium"
                android:gravity="top"
                android:lines="6"
                android:maxLength="200" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/productsansmedium"
            android:padding="@dimen/dim_padding"
            android:text="@string/chose_icon"
            android:textColor="#2F2F2F"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

        <HorizontalScrollView
            android:id="@+id/hsv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:measureAllChildren="false"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/innerLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView

                    xmlns:card_view="http://schemas.android.com/tools"
                    android:id="@+id/cardImage1"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:padding="3dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="6dp"
                    card_view:cardBackgroundColor="@android:color/transparent">

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView

                            android:id="@+id/photoType1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:foregroundTint="@color/textColor"
                            android:scaleType="centerCrop"
                            android:src="@drawable/run"
                            android:contentDescription="@string/todo" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
                    android:id="@+id/cardImage2"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:padding="3dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="6dp"
                    card_view:cardBackgroundColor="@android:color/transparent">

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView

                            android:id="@+id/photoType2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:foregroundTint="@color/textColor"
                            android:scaleType="centerCrop"
                            android:src="@drawable/work"
                            android:contentDescription="@string/todo" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
                    android:id="@+id/cardImage3"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:padding="3dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="6dp"
                    card_view:cardBackgroundColor="@android:color/transparent">

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView

                            android:id="@+id/photoType3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:foregroundTint="@color/textColor"
                            android:scaleType="centerCrop"
                            android:src="@drawable/read"
                            android:contentDescription="@string/todo" />
                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </HorizontalScrollView>

        <TextView
            android:id="@+id/textPast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/productsansmedium"
            android:padding="@dimen/dim_padding"
            android:text="@string/or_paste_your_url"
            android:textColor="#2F2F2F"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/paste_url"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:backgroundTint="@color/textColorBtn"
                android:maxLines="3"
                android:id="@+id/itUrl"
                style="@style/MyEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dip"
                android:fontFamily="@font/productsansmedium" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar

            android:id="@+id/progress_add"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton

        app:backgroundTint="@color/colorMain"
        android:id="@+id/addData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>