...
        android:text="@string/task_todo"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:listitem="@layout/item_todo" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
