<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_fragment_container"
    android:name="com.lukieoo.todolist.fragments.MainNavHostFragment"
    app:defaultNavHost="true"
    app:navGraph="@navigation/main_nav"
    >
</fragment>